apps/xray-checker/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: xray-checker
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`xray-checker.${BASE_DOMAIN:=libre.pod}`)
    priority: 1
    middlewares:
    - name: oauth2-errors
      namespace: oauth2-proxy
    - name: oauth2-forwardauth
      namespace: oauth2-proxy
    services:
    - name: xray-checker
      port: 80
